--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ before_script:
 script:
     - phpunit --coverage-clover=coverage.clover
     - wget https://scrutinizer-ci.com/ocular.phar
-    - if [[ "$(phpenv version-name)" != "7.0" && "$DB" == "pgsql" ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
