--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": [ "src/", "tests/" ],
-            "SymfonyStandard\\": "app/SymfonyStandard/"
+            "": [ "src/", "tests/" ]
         }
     },
     "minimum-stability": "stable",
@@ -44,7 +43,6 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "eTraxis\\Composer\\ScriptHandler::installNpmModules",
             "eTraxis\\Composer\\ScriptHandler::installAssets"
@@ -54,12 +52,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "eTraxis\\Composer\\ScriptHandler::updateAssets"
-        ],
-        "post-root-package-install": [
-            "SymfonyStandard\\Composer::hookRootPackageInstall"
         ]
     },
     "extra": {
