--- a/app/config/commandbus/users.yml
+++ b/app/config/commandbus/users.yml
@@ -2,90 +2,90 @@ services:
 
     command.user.register:
         class: eTraxis\CommandBus\Users\Handler\RegisterUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\RegisterUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\RegisterUserCommand }]
         arguments: [ @logger, @doctrine, %locale%, %theme% ]
 
     command.user.lock:
         class: eTraxis\CommandBus\Users\Handler\LockUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\LockUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\LockUserCommand }]
         arguments: [ @logger, @doctrine, %security_auth_attempts%, %security_lock_time% ]
 
     command.user.unlock:
         class: eTraxis\CommandBus\Users\Handler\UnlockUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\UnlockUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\UnlockUserCommand }]
         arguments: [ @doctrine ]
 
     command.users.list:
         class: eTraxis\CommandBus\Users\Handler\ListUsersCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\ListUsersCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\ListUsersCommand }]
         arguments: [ @translator, @doctrine ]
 
     command.user.find:
         class: eTraxis\CommandBus\Users\Handler\FindUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\FindUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\FindUserCommand }]
         arguments: [ @doctrine ]
 
     command.user.create:
         class: eTraxis\CommandBus\Users\Handler\CreateUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\CreateUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\CreateUserCommand }]
         arguments: [ @logger, @validator, @translator, @doctrine, @etraxis.encoder ]
 
     command.user.update:
         class: eTraxis\CommandBus\Users\Handler\UpdateUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\UpdateUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\UpdateUserCommand }]
         arguments: [ @logger, @validator, @translator, @doctrine, @security.token_storage ]
 
     command.user.delete:
         class: eTraxis\CommandBus\Users\Handler\DeleteUserCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\DeleteUserCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\DeleteUserCommand }]
         arguments: [ @logger, @doctrine, @security.authorization_checker ]
 
     command.users.disable:
         class: eTraxis\CommandBus\Users\Handler\DisableUsersCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\DisableUsersCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\DisableUsersCommand }]
         arguments: [ @doctrine, @security.token_storage ]
 
     command.users.enable:
         class: eTraxis\CommandBus\Users\Handler\EnableUsersCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\EnableUsersCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\EnableUsersCommand }]
         arguments: [ @doctrine ]
 
     command.settings.appearance:
         class: eTraxis\CommandBus\Users\Handler\SaveAppearanceCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\SaveAppearanceCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\SaveAppearanceCommand }]
         arguments: [ @logger, @validator, @translator, @doctrine ]
 
     command.password.set:
         class: eTraxis\CommandBus\Users\Handler\SetPasswordCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\SetPasswordCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\SetPasswordCommand }]
         arguments: [ @logger, @translator, @doctrine, @etraxis.encoder ]
 
     command.password.forgot:
         class: eTraxis\CommandBus\Users\Handler\ForgotPasswordCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\ForgotPasswordCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\ForgotPasswordCommand }]
         arguments: [ @doctrine, @etraxis.mailer, %mailfrom_address%, %mailfrom_name% ]
 
     command.password.reset:
         class: eTraxis\CommandBus\Users\Handler\ResetPasswordCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\ResetPasswordCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\ResetPasswordCommand }]
         arguments: [ @logger, @translator, @doctrine, @etraxis.encoder ]
 
     command.users.user_groups:
         class: eTraxis\CommandBus\Users\Handler\GetUserGroupsCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\GetUserGroupsCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\GetUserGroupsCommand }]
         arguments: [ @doctrine ]
 
     command.users.other_groups:
         class: eTraxis\CommandBus\Users\Handler\GetOtherGroupsCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\GetOtherGroupsCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\GetOtherGroupsCommand }]
         arguments: [ @doctrine ]
 
     command.users.add_groups:
         class: eTraxis\CommandBus\Users\Handler\AddRemoveGroupsCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\AddGroupsCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\AddGroupsCommand }]
         arguments: [ @logger, @doctrine ]
 
     command.users.remove_groups:
         class: eTraxis\CommandBus\Users\Handler\AddRemoveGroupsCommandHandler
-        tags: [{ name: command_handler, command: eTraxis\CommandBus\Users\RemoveGroupsCommand }]
+        tags: [{ name: nih_command_handler, command: eTraxis\CommandBus\Users\RemoveGroupsCommand }]
         arguments: [ @logger, @doctrine ]
