--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sensio/distribution-bundle"           : "~4.0",
         "sensio/framework-extra-bundle"        : "^3.0.2",
         "incenteev/composer-parameter-handler" : "~2.0",
+        "simple-bus/symfony-bridge"            : "~4.0",
         "ramsey/uuid"                          : "~2.8"
     },
     "require-dev": {
