--- a/app/config/services/datatables.yml
+++ b/app/config/services/datatables.yml
@@ -4,14 +4,14 @@ services:
     etraxis.datatable.groups:
         class: eTraxis\DataTables\ORM\GroupsDataTable
         tags: [{ name: datatable, entity: eTraxis:Group }]
-        arguments: [ @translator, @doctrine ]
+        arguments: [ @translator, @etraxis.repository.groups ]
 
     etraxis.datatable.projects:
         class: eTraxis\DataTables\ORM\ProjectsDataTable
         tags: [{ name: datatable, entity: eTraxis:Project }]
-        arguments: [ @translator, @localizer, @doctrine ]
+        arguments: [ @translator, @localizer, @etraxis.repository.projects ]
 
     etraxis.datatable.users:
         class: eTraxis\DataTables\ORM\UsersDataTable
         tags: [{ name: datatable, entity: eTraxis:User }]
-        arguments: [ @translator, @doctrine ]
+        arguments: [ @translator, @etraxis.repository.users ]
