PhpUnit 5 doesn't support PHP 5.5

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "license": "GPL-3.0",
     "require": {
-        "php"                                  : ">=5.5.0",
+        "php"                                  : "~5.5",
         "ext-ctype"                            : "*",
         "ext-iconv"                            : "*",
         "ext-mbstring"                         : "*",
@@ -26,8 +26,9 @@
         "etraxis/datatables-bundle"            : "0.0.1"
     },
     "require-dev": {
+        "php"                                  : "~5.6",
         "sensio/generator-bundle"              : "~2.3",
-        "phpunit/phpunit"                      : "~4.1|~5.0",
+        "phpunit/phpunit"                      : "~5.0",
         "fabpot/php-cs-fixer"                  : "~1.9"
     },
     "autoload": {
