--- a/app/config/services/voters.yml
+++ b/app/config/services/voters.yml
@@ -11,6 +11,7 @@ services:
         class: eTraxis\Voter\TemplateVoter
         public: false
         tags: [{ name: security.voter }]
+        arguments: [ @etraxis.repository.issues ]
 
     etraxis.voter.user:
         class: eTraxis\Voter\UserVoter
