--- a/app/config/services/voters.yml
+++ b/app/config/services/voters.yml
@@ -7,6 +7,12 @@ services:
         tags: [{ name: security.voter }]
         arguments: [ @etraxis.repository.issues ]
 
+    etraxis.voter.state:
+        class: eTraxis\Voter\StateVoter
+        public: false
+        tags: [{ name: security.voter }]
+        arguments: [ @etraxis.repository.events ]
+
     etraxis.voter.template:
         class: eTraxis\Voter\TemplateVoter
         public: false
