--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "sensio/generator-bundle"              : "~2.3|~3.0",
+        "symfony/phpunit-bridge"               : "~2.7",
         "phpunit/phpunit"                      : "~5.0",
         "fabpot/php-cs-fixer"                  : "~1.10"
     },
