--- a/app/config/simplebus/command.field.yml
+++ b/app/config/simplebus/command.field.yml
@@ -1,5 +1,10 @@
 services:
 
+    command.state.create.number:
+        class: eTraxis\SimpleBus\Fields\Handler\CreateNumberFieldCommandHandler
+        tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateNumberFieldCommand }]
+        arguments: [ @logger, @validator, @translator, @doctrine ]
+
     command.field.delete:
         class: eTraxis\SimpleBus\Fields\Handler\DeleteFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\DeleteFieldCommand }]
