--- a/app/config/simplebus/command.field.yml
+++ b/app/config/simplebus/command.field.yml
@@ -5,6 +5,11 @@ services:
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateNumberFieldCommand }]
         arguments: [ @logger, @validator, @translator, @doctrine ]
 
+    command.state.create.checkbox:
+        class: eTraxis\SimpleBus\Fields\Handler\CreateCheckboxFieldCommandHandler
+        tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateCheckboxFieldCommand }]
+        arguments: [ @logger, @validator, @translator, @doctrine ]
+
     command.field.delete:
         class: eTraxis\SimpleBus\Fields\Handler\DeleteFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\DeleteFieldCommand }]
