--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,15 @@
         "ext-ctype"                            : "*",
         "ext-iconv"                            : "*",
         "ext-mbstring"                         : "*",
-        "symfony/symfony"                      : "~2.7",
+        "symfony/symfony"                      : "~2.8",
         "doctrine/orm"                         : "~2.5",
-        "doctrine/dbal"                        : "~2.5",
         "doctrine/doctrine-bundle"             : "~1.4",
         "doctrine/doctrine-fixtures-bundle"    : "~2.2",
         "doctrine/doctrine-migrations-bundle"  : "~1.0",
         "doctrine/migrations"                  : "~1.0",
         "symfony/swiftmailer-bundle"           : "~2.3",
         "symfony/monolog-bundle"               : "~2.4",
-        "sensio/distribution-bundle"           : "~4.0",
+        "sensio/distribution-bundle"           : "~5.0",
         "sensio/framework-extra-bundle"        : "~3.0",
         "incenteev/composer-parameter-handler" : "~2.0",
         "simple-bus/symfony-bridge"            : "~4.0",
@@ -25,7 +24,7 @@
         "etraxis/datatables-bundle"            : "~1.0"
     },
     "require-dev": {
-        "sensio/generator-bundle"              : "~2.3|~3.0",
+        "sensio/generator-bundle"              : "~3.0",
         "symfony/phpunit-bridge"               : "~2.7",
         "phpunit/phpunit"                      : "~5.0",
         "fabpot/php-cs-fixer"                  : "~1.10"
@@ -33,7 +32,10 @@
     "autoload": {
         "psr-4": {
             "": [ "src/", "tests/" ]
-        }
+        },
+        "files": [
+            "app/AppKernel.php"
+        ]
     },
     "minimum-stability": "stable",
     "config": {
