--- a/app/config/simplebus/command.field.yml
+++ b/app/config/simplebus/command.field.yml
@@ -3,34 +3,34 @@ services:
     command.field.create.number:
         class: eTraxis\SimpleBus\Fields\Handler\NumberFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateNumberFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.create.checkbox:
         class: eTraxis\SimpleBus\Fields\Handler\CheckboxFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateCheckboxFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.create.issue:
         class: eTraxis\SimpleBus\Fields\Handler\IssueFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateIssueFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.update.number:
         class: eTraxis\SimpleBus\Fields\Handler\NumberFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateNumberFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.update.checkbox:
         class: eTraxis\SimpleBus\Fields\Handler\CheckboxFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateCheckboxFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.update.issue:
         class: eTraxis\SimpleBus\Fields\Handler\IssueFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateIssueFieldCommand }]
-        arguments: [ @logger, @validator, @translator, @doctrine ]
+        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
 
     command.field.delete:
         class: eTraxis\SimpleBus\Fields\Handler\DeleteFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\DeleteFieldCommand }]
-        arguments: [ @logger, @doctrine ]
+        arguments: [ "@logger", "@doctrine" ]
