--- a/app/config/simplebus/middleware.yml
+++ b/app/config/simplebus/middleware.yml
@@ -8,7 +8,7 @@ services:
             - { name: command_bus_middleware, priority: 100 }
             - { name: event_bus_middleware,   priority: 100 }
         arguments:
-            - @session
+            - "@session"
 
     middleware.validation:
         class: eTraxis\SimpleBus\Middleware\ValidationMiddleware
@@ -17,8 +17,8 @@ services:
             - { name: command_bus_middleware, priority: 90 }
             - { name: event_bus_middleware,   priority: 90 }
         arguments:
-            - @logger
-            - @validator
+            - "@logger"
+            - "@validator"
 
     middleware.timer.stop:
         class: eTraxis\SimpleBus\Middleware\StopTimerMiddleware
@@ -27,5 +27,5 @@ services:
             - { name: command_bus_middleware, priority: 0 }
             - { name: event_bus_middleware,   priority: 0 }
         arguments:
-            - @logger
-            - @session
+            - "@logger"
+            - "@session"
