--- a/app/config/travis/parameters.pgsql.yml
+++ b/app/config/travis/parameters.pgsql.yml
@@ -3,7 +3,7 @@ parameters:
     database_driver:        pdo_pgsql
     database_host:          127.0.0.1
     database_port:          ~
-    database_name:          etraxis
+    database_name:          xe
     database_user:          postgres
     database_password:      ~
     database_charset:       UTF8
