--- a/app/config/travis/parameters.sqlsrv.yml
+++ b/app/config/travis/parameters.sqlsrv.yml
@@ -3,7 +3,7 @@ parameters:
     database_driver:        pdo_sqlsrv
     database_host:          localhost
     database_port:          ~
-    database_name:          etraxis
+    database_name:          xe
     database_user:          ~
     database_password:      ~
     database_charset:       UTF8
