Symfony deprecation notice: passing type instances to FormBuilder::add(), Form::add() or the FormFactory is deprecated since version 2.8 and will not be supported in 3.0

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,6 +1,7 @@
 # Keep imports sorted alphabetically.
 imports:
     - { resource: services/datatables.yml }
+    - { resource: services/forms.yml }
     - { resource: services/listeners.yml }
     - { resource: services/repositories.yml }
     - { resource: services/voters.yml }
