--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,7 +21,7 @@ security:
             simple_form:
                 authenticator: ldap.authenticator
             remember_me:
-                key:      "%secret%"
+                secret:   "%secret%"
                 lifetime: 2592000
                 path:     /
                 domain:   ~
