--- a/app/config/services/repositories.yml
+++ b/app/config/services/repositories.yml
@@ -26,6 +26,11 @@ services:
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
         arguments: [ eTraxis\Entity\StringValue ]
 
+    etraxis.repository.text_values:
+        class: Doctrine\ORM\EntityRepository
+        factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
+        arguments: [ eTraxis\Entity\TextValue ]
+
     etraxis.repository.users:
         class: Doctrine\ORM\EntityRepository
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
